--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -1,26 +1,74 @@
-.m5px { margin: 5px; }
+.m5px {
+    margin: 5px;
+}
 
-.mlA { margin-left: auto; }
-.ml5px { margin-left: 5px; }
-.ml15px { margin-left: 15px; }
-.ml2per { margin-left: 2%; }
+.mlA {
+    margin-left: auto;
+}
 
-.mr5px { margin-right: 5px; }
-.mr15px { margin-right: 15px; }
-.mr50px { margin-right: 50px; }
-.mr2per { margin-right: 2%; }
+.ml5px {
+    margin-left: 5px;
+}
 
-.mt5px { margin-top: 5px; }
-.mt15px { margin-top: 15px; }
-.mt25px { margin-top: 25px; }
-.mt50px { margin-top: 50px; }
+.ml15px {
+    margin-left: 15px;
+}
 
-.mb20px { margin-bottom: 20px; }
-.mb1per { margin-bottom: 1%; }
+.ml2per {
+    margin-left: 2%;
+}
 
-.p10px { padding: 10px; }
-.p14px { padding: 14px; }
-.p16px { padding: 16px; }
+.mr5px {
+    margin-right: 5px;
+}
+
+.mr15px {
+    margin-right: 15px;
+}
+
+.mr50px {
+    margin-right: 50px;
+}
+
+.mr2per {
+    margin-right: 2%;
+}
+
+.mt5px {
+    margin-top: 5px;
+}
+
+.mt15px {
+    margin-top: 15px;
+}
+
+.mt25px {
+    margin-top: 25px;
+}
+
+.mt50px {
+    margin-top: 50px;
+}
+
+.mb20px {
+    margin-bottom: 20px;
+}
+
+.mb1per {
+    margin-bottom: 1%;
+}
+
+.p10px {
+    padding: 10px;
+}
+
+.p14px {
+    padding: 14px;
+}
+
+.p16px {
+    padding: 16px;
+}
 
 .cw {
     color: white !important;
@@ -32,64 +80,78 @@
     width: 100%;
     height: 40px;
 }
+
 .header__account {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .account__image {
     max-width: 30px;
     height: 30px;
     border-radius: 100%;
 }
+
 .account__exit {
     width: 20px;
     height: 20px;
 }
+
 .images-search {
     display: flex;
     justify-content: start;
     align-items: center;
     font-weight: 300;
-    border: 1px solid RGBA(0,0,0,0.1);
+    border: 1px solid RGBA(0, 0, 0, 0.1);
     border-radius: 6px;
 }
+
 .images-search__input {
     width: 290px;
 }
+
 .images_search__find {
     width: 24px;
     height: 24px;
 }
+
 .tags-panel {
     font-weight: 900;
 }
+
 .sorting-section {
     margin: 0 5px 10px 5px;
     display: flex;
     justify-content: left;
     align-items: center;
 }
+
 .sort-list {
     display: flex;
 }
+
 .sort-item {
     margin: 0 0 5px 5px;
     color: #5e5e5e;
     transition: .2s color ease;
 }
+
 .sort-item:hover {
     cursor: pointer;
     color: #0064f9;
 }
+
 .sort-item.active {
     margin: 0 0 3px 5px;
     border-bottom: 2px solid #0064f9;
     color: #0064f9;
 }
+
 .images-columns {
     display: flex;
 }
+
 .images-column {
     margin: 0 5px 0 5px;
     display: flex;
@@ -97,13 +159,16 @@
     align-items: center;
     max-width: 25%;
 }
+
 .image-block {
     position: relative;
     max-width: 100%;
 }
+
 .preview-image-small {
     max-width: 100%;
 }
+
 .author-panel {
     position: absolute;
     bottom: 0;
@@ -114,6 +179,7 @@
     height: 15%;
     background: linear-gradient(0deg, black, transparent);
 }
+
 .account-block {
     display: flex;
     justify-content: center;
@@ -122,6 +188,7 @@
     font-weight: 300;
     font-size: .95rem;
 }
+
 .upvote-button {
     display: flex;
     justify-content: center;
@@ -129,10 +196,12 @@
     fill: #e8e8e8;
     transition: .2s transform ease;
 }
+
 .upvote-button:hover {
     cursor: pointer;
     transform: scale(1.25);
 }
+
 .main-footer {
     display: flex;
     flex-direction: column;
@@ -145,27 +214,33 @@
 .preview-image {
     max-height: 60vh;
 }
+
 .image-detail-panel {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .account {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .account__nickname {
-    color: RGBA(0,0,0,.5);
+    color: RGBA(0, 0, 0, .5);
 }
+
 .download-wrapper {
     display: flex;
     justify-content: start;
     align-items: center;
 }
+
 .report, .get-license, .replace-image {
-    color: RGBA(0,0,0,.15);
+    color: RGBA(0, 0, 0, .15);
 }
+
 .download, .approve {
     display: flex;
     justify-content: center;
@@ -177,75 +252,90 @@
     border-radius: 2px;
     font-weight: bold;
 }
+
 .rating {
-    color: RGBA(0,0,0,.25);
+    color: RGBA(0, 0, 0, .25);
     font-size: 1.5rem;
 }
+
 .rating-number {
-    color: RGBA(0,0,0,.5);
+    color: RGBA(0, 0, 0, .5);
 }
+
 .tags-panel {
     display: flex;
     justify-content: start;
     align-items: center;
     width: 100%;
 }
+
 .main.tags-panel {
     justify-content: center;
 }
+
 .tag {
     display: flex;
     justify-content: start;
     align-items: center;
 }
+
 .tag-name {
     padding: .5rem 1rem;
     border: 1px solid #e8e8e8;
     box-shadow: 0 1px 2px 0 rgb(0 0 5%);
     border-radius: 6px;
 }
+
 .delete-tag {
-    color: RGBA(0,0,0,.25);
+    color: RGBA(0, 0, 0, .25);
     font-size: 2rem;
     font-stretch: ultra-expanded;
 }
+
 .add-tag {
-    color: RGBA(0,0,0,.25);
+    color: RGBA(0, 0, 0, .25);
     font-size: 2rem;
 }
+
 .colors-panel {
     display: flex;
     justify-content: start;
     align-items: center;
     width: 100%;
 }
+
 .colors-span {
-    color: RGBA(0,0,0,.5);
+    color: RGBA(0, 0, 0, .5);
 }
+
 .color {
     width: 2rem;
     height: 2rem;
     border-radius: 2rem;
 }
+
 .image-similar {
     display: flex;
     flex-direction: column;
     align-items: start;
     width: 80%;
 }
+
 .image-similar-title {
     width: 100%;
     font-size: 2rem;
     font-weight: 400;
     text-align: center;
-    color: RGBA(0,0,0,.5);
+    color: RGBA(0, 0, 0, .5);
     white-space: nowrap;
 }
+
 .image-similar > .preview-image-small {
     margin-bottom: 5%;
     max-height: 20vh;
     max-width: 20vh;
 }
+
 .image-random {
     width: 80%;
 }
@@ -258,13 +348,16 @@
     border: 1px solid RGBA(0, 0, 0, 0.1);
     border-radius: 2px;
 }
+
 .accounts-search__input {
     width: 290px;
 }
+
 .accounts-search__find {
     width: 24px;
     height: 24px;
 }
+
 .user-panel, .moderator-panel, .administrator-panel {
     padding: .5rem 1rem;
     display: flex;
@@ -272,17 +365,21 @@
     align-items: center;
     box-shadow: 0 3px 3px #e1e1e1;
 }
+
 .user-panel__item {
     height: 100%;
-    border-left: 1px solid RGBA(0,0,0,.15);
+    border-left: 1px solid RGBA(0, 0, 0, .15);
 }
+
 .images-editor {
     display: flex;
     width: 80%;
 }
+
 .image-details {
     width: 80%;
 }
+
 .images-editor__panel {
     width: 20%;
 }
@@ -294,27 +391,33 @@
     align-items: start;
     min-width: 500px;
 }
+
 .avatar, .email, .old-password, .new-password {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
 }
+
 .settings-title {
     font-size: 3rem;
     font-weight: bold;
 }
+
 .avatar > .bottom-content {
     display: flex;
     justify-content: center;
 }
+
 .account__image.settings-page {
     max-width: 3rem;
     height: 3rem;
 }
+
 .settings__option-title {
     font-size: 1.5rem;
 }
+
 .settings-password > .bottom-content {
     display: flex;
     flex-direction: column;
@@ -322,6 +425,7 @@
     align-items: center;
     width: 100%;
 }
+
 .change-password__done-btn {
     display: flex;
     justify-content: center;
@@ -333,9 +437,11 @@
     border-radius: 2px;
     font-weight: bold;
 }
+
 .exit-btn {
     color: #5e5e5e;
 }
+
 .settings-input {
     width: 500px;
     border-radius: 3px;
@@ -347,6 +453,59 @@
 
 .user-agreements {
     width: 80%;
+}
+
+.loader-ellips {
+    font-size: 20px;
+    position: relative;
+    width: 4em;
+    height: 1em;
+    margin: 10px auto;
+}
+.loader-ellips__dot {
+    display: block;
+    width: 1em;
+    height: 1em;
+    border-radius: 0.5em;
+    background: #555;
+    position: absolute;
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+.loader-ellips__dot:nth-child(1),
+.loader-ellips__dot:nth-child(2) {
+    left: 0;
+}
+.loader-ellips__dot:nth-child(3) {
+    left: 1.5em;
+}
+.loader-ellips__dot:nth-child(4) {
+    left: 3em;
+}
+@keyframes reveal {
+    from {
+        transform: scale(0.001);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+@keyframes slide {
+    to {
+        transform: translateX(1.5em);
+    }
+}
+.loader-ellips__dot:nth-child(1) {
+    animation-name: reveal;
+}
+.loader-ellips__dot:nth-child(2),
+.loader-ellips__dot:nth-child(3) {
+    animation-name: slide;
+}
+.loader-ellips__dot:nth-child(4) {
+    animation-name: reveal;
+    animation-direction: reverse;
 }
 
 @media (min-width: 1900px) {
