--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -20,6 +20,9 @@
 
         {% include 'footer.html' %}
 
+        <script src="{% static "js/jquery-3.6.0.min.js" %}"></script>
+        <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+        <script src="{% static 'js/infinite.min.js' %}"></script>
         {% block script %}{% endblock script %}
     </body>
 </html>
