--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -17,13 +17,13 @@
     </section>
     <section class="image-detail mt50px">
         <div class="top-content">
-            <img class="preview-image" src="{% static 'img/1.jpg '%}" alt="tag tag tag tag" />
+            <img class="preview-image" src="{{ image }}" alt="tag tag tag tag" />
         </div>
         <div class="bottom-content mt5px">
             <div class="image-detail-panel mb20px">
                 <a class="account" href="cabinet.html">
                     <img class="account__image" src="{% static 'img/goose.jpg '%}" alt="Account image" />
-                    <p class="account__nickname ml5px">TestNick</p>
+                    <p class="account__nickname ml5px">{{ image.author }}</p>
                 </a>
                 <div class="download-wrapper">
                     <button class="report mr15px">Report</button>
