--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -98,6 +98,10 @@
     height: 20px;
 }
 
+.images {
+    display: flex;
+    flex-wrap: wrap;
+}
 .images-search {
     display: flex;
     justify-content: start;
@@ -162,11 +166,13 @@
 
 .image-block {
     position: relative;
-    max-width: 100%;
+    margin: 5px;
+    max-width: 24%;
 }
 
 .preview-image-small {
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .author-panel {
@@ -455,6 +461,33 @@
     width: 80%;
 }
 
+.pagination {
+    color: #0c73a9;
+    margin: 17px 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pagination__block {
+    display: flex;
+    border-radius: 6px;
+    border: 2px solid #57c8f4;
+}
+.pagination__block__emp, .pagination__block a {
+    display: inline-block;
+    padding: 9px 40px;
+}
+.pagination__block__bg {
+    background-color: #57c8f4;
+    color: #fff;
+}
+.pagination__page {
+    margin: 0 40px;
+}
+.pagination__block__disabled {
+    opacity: .5;
+}
+
 .loader-ellips {
     font-size: 20px;
     position: relative;
@@ -507,6 +540,8 @@
     animation-name: reveal;
     animation-direction: reverse;
 }
+
+
 
 @media (min-width: 1900px) {
     .images-section {
