--- a/main/templates/image-block.html
+++ b/main/templates/image-block.html
@@ -4,10 +4,10 @@
 {% for image in images %}
     <div class="image-block mb20px">
         <a class="image-link" href="{{ image.get_absolute_url }}">
-            <div class="preview-image-small" style="background-image: url({{ image }});"></div>
+            <div class="preview-image-small" style="background-image: url({{ image.preview_image.url }});"></div>
         </a>
         <div class="author-panel">
-            <a class="account-block ml2per" href="image.author">
+            <a class="image__account ml2per" href="{% url 'accounts:account' image.author %}">
                 <div class="account__image small" style="background-image: url({{ image.author.profile.photo.url }});"></div>
                 <span class="account__nickname">{{ image.author.first_name }} {{ image.author.last_name }}</span>
             </a>
