--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,7 +27,7 @@
 }
 
 input[type="file"] {
-    display: none;
+    /*display: none;*/
 }
 
 
@@ -129,7 +129,7 @@ input[type="file"] {
     margin-bottom: 2rem;
     text-align: center;
 }
-.auth-form .button{
+form .button{
     width: 100%;
 }
 .button--compact {
