css refactored, new reset_password, change_email, activate account

--- a/accounts/templates/settings.html
+++ b/accounts/templates/settings.html
@@ -8,14 +8,16 @@
 
 {% block content %}
 {% if message %}
-    <p class="auth-form__title">{{ message }}</p>
+    <h1 class="cg mt50px">{{ message }}</h1>
 {% else %}
+    <form id="change-email" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input class="dn" type="text" name="change_email" value="1" />
+    </form>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <section class="settings mt50px">
-            <div class="top-content mt15px">
-                <h1 class="settings-title">Edit Your Profile</h1>
-            </div>
+        <section class="settings-section flex jc ac mt50px">
+            <h1 class="mt15px">Edit Your Profile</h1>
             {% if user_form.errors %}
                 {% for error in user_form.non_field_errors %}
                     <div class="alert">
@@ -23,27 +25,36 @@
                     </div>
                 {% endfor %}
             {% endif %}
-            <div class="bottom-content mt15px">
-                <div class="avatar">
-                    <div class="top-content">
-                        <span class="settings__option-title">Avatar</span>
-                        {{ profile_form.errors.photo }}
-                    </div>
-                    <div class="bottom-content mt5px">
-                        <div class="account__image settings-page" style="background-image: url({{ profile_form.instance.photo.url }});"></div>
-                        <label class="custom-file-upload">
-                            {{ profile_form.photo }}
-                            <div class="upload-button ml15px p10px">Upload</div>
-                        </label>
-                    </div>
+            <div class="account-avatar mt15px">
+                <div class="top-content">
+                    {{ profile_form.errors.photo }}
                 </div>
-                <div class="email mt15px">
+                <div class="bottom-content mt5px">
+                    {% if profile_form.instance.photo %}
+                        <img class="avatar big input-image-preview mb20px" src="{{ profile_form.instance.photo.url }}" />
+                    {% else %}
+                        <img class="avatar big input-image-preview mb20px" src="{% static 'img/goose.jpg' %}" />
+                    {% endif %}
+                    <label class="custom-file-upload">
+                        {% if profile_form.photo %}
+                            {{ profile_form.photo }}
+                        {% else %}
+                            {% static 'img/goose.jpg' %}
+                        {% endif %}
+                        <span class="button button--blue middle ml15px p10px">Upload</span>
+                    </label>
+                </div>
+            </div>
+            <div class="bottom-content mt15px">
+                <div class="email">
                     <div class="top-content">
                         <span class="settings__option-title">Email</span>
-                        {{ email_form.errors.email }}
                     </div>
-                    <div class="bottom-content">
-                        {{ email_form.email }}
+                    <div class="bottom-content disabled-field">
+                        <div class="disabled-field__message flex je ac">
+                            <button class="button button--gray small mr5px" form="change-email" type="submit">Change email</button>
+                        </div>
+                        <span class="blurred">{{ user.email }}</span>
                     </div>
                 </div>
                 <div class="first-name mt15px">
@@ -51,7 +62,7 @@
                         <span class="settings__option-title">First name</span>
                         {{ user_form.errors.first_name }}
                     </div>
-                    <div class="bottom-content">
+                    <div class="bottom-content sqr-input-container">
                         {{ user_form.first_name }}
                     </div>
                 </div>
@@ -60,23 +71,21 @@
                         <span class="settings__option-title">Last name</span>
                         {{ user_form.errors.last_name }}
                     </div>
-                    <div class="bottom-content">
+                    <div class="bottom-content sqr-input-container">
                         {{ user_form.last_name }}
                     </div>
                 </div>
             </div>
         </section>
-        <section class="settings-password mt50px">
-            <div class="top-content">
-                <h1 class="settings-title">Change Your Password</h1>
-            </div>
+        <section class="settings-password-section flex jc ac mt50px">
+            <h1>Change Your Password</h1>
             <div class="center-content mt15px">
                 <div class="old-password">
                     <div class="top-content">
                         <span class="settings__option-title">Old password</span>
                         {{ user_form.errors.old_password }}
                     </div>
-                    <div class="bottom-content">
+                    <div class="bottom-content sqr-input-container">
                         {{ user_form.old_password }}
                     </div>
                 </div>
@@ -85,16 +94,19 @@
                         <span class="settings__option-title">New password <span class="characters-info">(6 characters minimum)</span></span>
                         {{ user_form.errors.new_password }}
                     </div>
-                    <div class="bottom-content">
+                    <div class="bottom-content sqr-input-container">
                         {{ user_form.new_password }}
                     </div>
                 </div>
             </div>
-            <div class="bottom-content mt25px">
-                <input class="change-password__done-btn" type="submit" value="Update Profile">
+            <div class="settings-bottom-options mt25px">
+                <button class="button button--blue middle" type="submit">Update Profile</button>
                 <a class="exit-btn mt15px" href="{% url 'accounts:logout' %}">Exit</a>
             </div>
         </section>
     </form>
 {% endif %}
 {% endblock content %}
+{% block js %}
+    <script src="{% static 'js/view_uploaded_image.js' %}"></script>
+{% endblock %}
