--- a/main/templates/registration/signup.html
+++ b/main/templates/registration/signup.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <section class="auth">
-        <div class="auth-form">
+        <div class="auth-form flex jc">
             <div class="auth-form__title">
                 Загружайте бесплатные фото и видео, созданные сообществом фотографов.
             </div>
@@ -41,7 +41,7 @@
             {% endif %}
             <form method="post">
                 {% csrf_token %}
-                <div class="inputs auth-form__inputs">
+                <div class="auth-form__inputs flex jc">
                     <div class="inputs__group--horizontal">
                         <div class="inputs__item">
                             {{ form.first_name }}
