--- a/accounts/templates/acc_new_email.html
+++ b/accounts/templates/acc_new_email.html
@@ -1,6 +1,7 @@
-{% autoescape off %}
-Hi {{ user.first_name }},
-Please click on the link to confirm your email address,
-http://{{ domain }}{% url 'accounts:new_email' uidb64=uid token=token email=email %}
-If you think, it's not you, then just ignore this email.
+{% load i18n %}{% autoescape off %}
+{% translate "Please go to the following page and choose a new value:" %}
+{% block reset_link %}
+{{ protocol }}://{{ domain }}{% url 'accounts:confirm' uidb64=uid token=token field=field %}
+{% endblock %}
+{% translate "Thanks for using our site!" %}
 {% endautoescape %}
