--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -7,78 +7,76 @@
 {% endblock title %}
 
 {% block content %}
-    <section class="images-search mt50px">
-        <form action="{% url 'main:home' %}" method="GET">
-            <input name="search" class="images-search__input p14px" type="text" placeholder="Something.."/>
-            <button class="images_search__find mr5px">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-            </button>
+    <section class="image-search-section mt50px">
+        <form method="GET" class="image-search__form">
+            <label class="rounded-input-container flex js ac">
+                <input name="search" class=" p14px" type="text" placeholder="Something.."/>
+                <button class="button ml5px">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                    </svg>
+                </button>
+            </label>
         </form>
     </section>
     <section class="image-detail mt50px">
-        {% if moderator or image.author == request.user %}
-            <div class="moderator-panel">
-                <form action="{% url 'main:detailed_image_view' slug=image.slug %}" method="post">
-                    {% csrf_token %}
-                    <div class="tags">
-                        <div class="top-content">
-                            <span class="add-images__option-title settings__option-title">Tags</span>
-                        </div>
-                        {{ form.errors.tags }}
-                        <div class="bottom-content mt5px">
-                            {{ form.tags }}
+        <div class="flex jc">
+            <div class="image-detail__info panel mb20px">
+                <a class="account-info flex jc ac p06rem" href="{% url 'accounts:account' image.author.username %}">
+                    <img class="avatar" src="{% static 'img/goose.jpg ' %}" alt="Account image"/>
+                    <p class="full-name ml05rem">{{ image.author.first_name }} {{ image.author.last_name }}</p>
+                </a>
+                <span class="created-time p06rem">{{ image.created_at }}</span>
+            </div>
+            <div class="image-detail__image mb20px">
+                <img src="{{ image }}" />
+                <div class="flex jc">
+                    <button class="button button--white mr15px">Report</button>
+                    <button class="button download button--blue middle">Download</button>
+                    <button class="button button--white ml15px">Get license</button>
+                </div>
+            </div>
+            <div class="image-detail__edit">
+                {% if moderator or image.author == request.user %}
+                    <div class="edit-tags mt10px">
+                        <form id="edit-tags" method="post" class="edit-tags__form">
+                            {% csrf_token %}
+                            <div class="tags">
+                                {{ form.errors.tags }}
+                                <div class="bottom-content mt5px">
+                                    {{ form.tags }}
+                                </div>
+                            </div>
+                        </form>
+                        <form id="delete-image" action="{% url 'main:delete_image' slug=image.slug %}" method="post">
+                            {% csrf_token %}
+                        </form>
+                        <div class="edit-tags__buttons mt15px">
+                            <button type="submit" name="edit" class="button button--blue small mr10px" form="edit-tags">Save changes</button>
+                            <button type="submit" name="delete" class="button button--red small" onclick="return confirm('Are you sure you want to delete this item?');" form="delete-image">Delete image</button>
                         </div>
                     </div>
-                    <input type="submit" name="edit" class="button button--small button--blue mt15px" value="save">
-                </form>
-                <form action="{% url 'main:delete_image' slug=image.slug %}" method="post">
-                    {% csrf_token %}
-                    <input type="submit" name="delete" class="button button--small button--red mt15px" value="delete" onclick="return confirm('Are you sure you want to delete this item?');">
-                </form>
-            </div>
-        {% endif %}
-        <div class="top-content">
-            <img class="preview-image" src="{{ image }}" alt="tag tag tag tag"/>
-        </div>
-        <div class="bottom-content mt5px">
-            <div class="image-detail-panel mb20px">
-                <a class="account" href="cabinet.html">
-                    <img class="account__image small" src="{% static 'img/goose.jpg ' %}" alt="Account image"/>
-                    <p class="account__nickname ml5px">{{ image.author }}</p>
-                </a>
-                <div class="download-wrapper">
-                    <button class="report mr15px">Report</button>
-                    <button class="download">Download</button>
-                    <button class="get-license ml15px">Get License</button>
-                </div>
-                <div class="rating">
-                    <button class="plus">+</button>
-                    <span class="rating-number">1</span>
-                    <button class="minus">-</button>
-                </div>
-            </div>
-            <div class="bottom-content">
-                <div class="tags-panel">
-                    {% for tag in image.tags.all %}
-                        <div class="tag mr5px">
-                            <button class="tag-name">{{ tag }}</button>
-                        </div>
-                    {% endfor %}
-                </div>
-                <div class="colors-panel mt15px">
+                {% else %}
+                    <div class="tags-panel flex js ac">
+                        {% for tag in image.tags.all %}
+                            <div class="tag flex js ac mr5px">
+                                <a class="tag-name" href="{{ tag.s }}">{{ tag }}</a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                <div class="colors-panel flex js ac mt15px">
                     <span class="colors-span">Colors:</span>
                     {% for color in colors %}
-                        <button class="color ml5px" style="background: {{ color.color }}"></button>
+                        <a class="color ml5px" href="" style="background: {{ color.color }}"></a>
                     {% endfor %}
                 </div>
             </div>
         </div>
     </section>
-    <section class="image-similar mt50px">
-        <h3 class="image-similar-title mb20px">SIMILAR IMAGES</h3>
-        <section class="images">
+    <section class="images-section flex jc ac mt50px">
+        <h1 class="mb20px">SIMILAR IMAGES</h1>
+        <section class="images-list flex js ac">
             {% include "image-block.html" with images=similar_images %}
         </section>
     </section>
