--- a/main/templates/registration/restore_password.html
+++ b/main/templates/registration/restore_password.html
@@ -19,12 +19,12 @@
         </div>
     </header>
     <section class="auth">
-        <div class="auth-form">
+        <div class="auth-form flex jc">
             <div class="auth-form__title">
                 Изменить пароль
             </div>
             <form action="/" method="post">
-                <div class="inputs auth-form__inputs">
+                <div class="auth-form__inputs flex jc">
                     <div class="inputs__item">
                         <input type="email" placeholder="Электронная почта">
                     </div>
