--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -1,34 +1,32 @@
-
-* {
+*,
+*::before,
+*::after {
     margin: unset;
     padding: unset;
-    background: unset;
-    border: unset;
-    text-decoration: unset;
     color: inherit;
-    font-family: inherit;
-    font-weight: inherit;
-    font-size: inherit;
+    box-sizing: border-box;
 }
-
 html {
     font-size: 16px;
     font-family: "Roboto";
     font-weight: 500;
     color: rgb(51, 51, 51);
 }
-input {
-    box-sizing: border-box;
-}
-button:hover {
-    cursor: pointer;
-}
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    max-width: 100%;
+    width: calc(100% - 5px);
     min-height: 100vh;
+    display: block;
     position: relative;
+    scroll-behavior: smooth;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+}
+ul, ol {
+    list-style: none;
+}
+a {
+    text-decoration: unset;
+}
+input, button, textarea, select {
+    font: inherit;
 }
