--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="main-footer p10px">
+<footer class="main-footer p10px mt25px">
     <p class="footer_text">GodFon. 2021-2021</p>
-    <a href="#">User agreements</a>
+    <a href="{% url 'main:user_agreements' %}">User agreements</a>
 </footer>
