--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,46 +1,33 @@
 {% load templatehelpers %}
 
-<div class="pagination">
+<section class="pagination flex jc ac mt50px">
     {% if page.has_previous %}
-        <div class="pagination__block">
-            <div>
-                <a href="{% relative_url 1 'page' request.GET.urlencode %}">First</a>
-            </div>
-            <div class="pagination__block__bg left">
-                <a href="{% relative_url page.previous_page_number 'page' request.GET.urlencode %}">Previous</a>
-            </div>
-        </div>
+        <button class="button button--gray middle">
+            <a href="{% relative_url 1 'page' request.GET.urlencode %}">First</a>
+            <span class="vertical-line ml50px mr50px"></span>
+            <a href="{% relative_url page.previous_page_number 'page' request.GET.urlencode %}">Previous</a>
+        </button>
     {% else %}
-        <div class="pagination__block pagination__block__disabled">
-            <div>
-                <span class="pagination__block__emp">First</span>
-            </div>
-            <div class="pagination__block__bg left">
-                <span class="pagination__block__emp">Previous</span>
-            </div>
-        </div>
+        <button class="button button--gray middle disabled">
+            <span class="choices">Next</span>
+            <span class="vertical-line ml50px mr50px"></span>
+            <span class="choices">Last</span>
+        </button>
     {% endif %}
     <div class="pagination__page">
         {{ page.number }} из {{ page.paginator.num_pages }}
     </div>
     {% if page.has_next %}
-        <div class="pagination__block">
-            <div class="pagination__block__bg right">
-                <a href="{% relative_url page.next_page_number 'page' request.GET.urlencode %}">Next</a>
-            </div>
-            <div>
-
-                <a href="{% relative_url page.paginator.num_pages 'page' request.GET.urlencode %}">Last</a>
-            </div>
-        </div>
+        <button class="button button--gray middle">
+            <a href="{% relative_url page.next_page_number 'page' request.GET.urlencode %}">Next</a>
+            <span class="vertical-line ml50px mr50px"></span>
+            <a href="{% relative_url page.paginator.num_pages 'page' request.GET.urlencode %}">Last</a>
+        </button>
     {% else %}
-        <div class="pagination__block pagination__block__disabled">
-            <div class="pagination__block__bg right">
-                <span class="pagination__block__emp">Next</span>
-            </div>
-            <div>
-                <span class="pagination__block__emp">Last</span>
-            </div>
-        </div>
+        <button class="button button--gray middle disabled">
+            <span class="choices">Next</span>
+            <span class="vertical-line ml50px mr50px"></span>
+            <span class="choices">Last</span>
+        </button>
     {% endif %}
-</div>
+</section>
